--- a/Mango.Web/Views/Shared/_Layout.cshtml
+++ b/Mango.Web/Views/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
-            <partial name="_Notification" />
+            <partial name="_Notifications" />
         </main>
     </div>
 
